# nyra

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.VSCodeCounter/2026-06-27_08-56-59/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cursor/rules/: nyra-guidelines.mdc
.github/workflows/: ci.yml  release.yml
Apps/: README.md  plan.md
Apps/Compiler apps/: plan.md
Apps/GUI/: plan.md
Apps/Games/: plan.md
Apps/Networking/: plan.md
Apps/databases/: plan.md
Apps/dev/: plan.md
Apps/learn/: main.ny
agents/: skill.md
benchmarks/: ci-baseline.json
bindgen/: Cargo.toml
bindgen/src/: emit.rs  fetch.rs  lib.rs  scan.rs  types.rs
c-bindgen/: Cargo.toml
c-bindgen/src/: config.rs  emit.rs  lib.rs  names.rs  parse.rs  shim.rs  types.rs
cli/: Cargo.toml
cli/src/: artifacts.rs  bind.rs  c_cache.rs  c_lib.rs  cc.rs  debug.rs  fmt.rs  link.rs  llvm_tools.rs  main.rs  pgo.rs  target.rs  toolchain.rs  ui.rs  wasm_toolchain.rs  watch.rs
compiler-ffi/: Cargo.toml
compiler-ffi/src/: lib.rs
compiler/analysis/: Cargo.toml
compiler/analysis/src/: inlay.rs  lib.rs  rename_edits.rs  semantic.rs  signature.rs  workspace.rs
compiler/ast/: Cargo.toml
compiler/borrowck/: Cargo.toml
compiler/borrowck/src/: diag.rs  lib.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: ansi_color.rs  const_mod.rs  lib.rs  runtime_map.rs
compiler/codegen/src/llvm/: bindings.rs  block.rs  channel.rs  closure.rs  collections.rs  const_mod.rs  control.rs  core.rs  drop.rs  expr.rs  ffi.rs  intrinsics.rs  literals.rs  mod.rs  ops.rs  parallel.rs  print.rs  program.rs  progress.rs  spawn.rs  stmt.rs  store.rs  strings.rs  trait_objects.rs  types_map.rs  util.rs
compiler/codegen/tests/: llvm_patterns.rs
compiler/compiletest/: Cargo.toml
compiler/compiletest/src/: directives.rs  lib.rs  main.rs
compiler/const_eval/: Cargo.toml
compiler/const_eval/src/: comptime.rs  lib.rs
compiler/driver/: Cargo.toml
compiler/expand/: Cargo.toml
compiler/expand/src/: arrows.rs  async_desugar.rs  async_for_in.rs  async_state_machine.rs  clone.rs  coerce.rs  future_async.rs  future_await.rs  future_structs.rs  lib.rs  main_argv.rs  match_or.rs  nullish.rs  ownership_prefix.rs  serde_traits.rs  string_borrow.rs  struct_ctors.rs  struct_serde.rs  trait_objects.rs  try_op.rs  vec_nested.rs  vec_pod.rs  vec_reloc.rs
compiler/lint/: Cargo.toml
compiler/lint/src/: lib.rs  prune.rs  spans.rs  unused_imports.rs  unused_vars.rs
compiler/monomorph/: Cargo.toml
compiler/monomorph/src/: infer_calls.rs  lib.rs  trait_bounds.rs
compiler/ownership/: Cargo.toml
compiler/ownership/src/: context.rs  copy_attrs.rs  drop.rs  escape.rs  kind.rs  lib.rs  lifetime.rs  nll.rs  no_escape.rs  parallel_for.rs  send_sync.rs  subtype.rs
compiler/resolve/: Cargo.toml
compiler/resolve/src/: lib.rs  merge.rs  paths.rs  prelude.rs  sonic.rs  sources.rs  stdlib.rs  symbols.rs
compiler/typecheck/: Cargo.toml
compiler/typecheck/src/: anon_structs.rs  array_builtins.rs  checker_expr.rs  checker_function.rs  checker_io.rs  checker_program.rs  checker_setup.rs  checker_stmt.rs  date_builtins.rs  diagnostics.rs  ffi.rs  future_types.rs  helpers.rs  lang.rs  lib.rs  math_builtins.rs  param_inference.rs  send_sync.rs  string_builtins.rs  trait_dispatch.rs
dap/: Cargo.toml
dap/src/: lib.rs  main.rs  protocol.rs  server.rs  transport.rs
dap/src/debugger/: gdb.rs  lldb.rs  mod.rs  parse.rs
docs/: abi-manifest.toml  architecture.md  bindings.md  c-bindgen.md  native-cc.md  roadmap-stable.md  stability-v1.md  status.md  testing-runbook.md
editor/: README.md
examples/: arrow_fn_smoke.ny  async_executor.ny  async_executor.typed.ny  async_future.ny  async_future.typed.ny  async_select.ny  async_select.typed.ny  async_spawn.ny  async_spawn.typed.ny  async_state_machine.ny  async_state_machine.typed.ny  async_state_machine_string.ny  async_state_machine_string.typed.ny  benchmark_block.ny  closure_escape_smoke.ny  closure_loop_smoke.ny  closure_smoke.ny  compiler_check.ny  compiler_check_typed.ny  control_continue.ny  control_continue_typed.ny  defer_return_smoke.ny  doc_comments.ny  doc_comments_typed.ny  enum_payload_match.ny  env_set_smoke.ny  graph_arc_smoke.ny  inference_array_return.ny  inference_generics.ny  inferred_arrow_smoke.ny  iter_smoke.ny  language_improvements.ny  microservice_async_smoke.ny  monolith_struct_smoke.ny  net_http_smoke.ny  nullish_smoke.ny  optional_chain_smoke.ny  ownership_basics.ny  parallel_for.ny  process_command.ny  (+27 more)
fuzz/: Cargo.toml  README.md
fuzz/corpus/fuzz_compile/: broken_main.ny  fuzz_bad_char.ny  fuzz_int_overflow.ny  fuzz_keyword_soup.ny  fuzz_unbalanced_if.ny  valid_main.ny
fuzz/corpus/fuzz_gen/: bad_char  fuzz_repeated_let.ny  hello.ny  math.ny  repeated_let  unbalanced_if
fuzz/dictionaries/: nyra.dict
fuzz/fuzz_targets/: fuzz_codegen.rs  fuzz_compile.rs  fuzz_gen.rs  fuzz_lexer.rs  fuzz_parser.rs
grammar/: README.md  nyra.tmLanguage.json
libraries/: README.md
lsp/: Cargo.toml
lsp/src/: code_actions.rs  diagnostics.rs  document.rs  lib.rs  semantic.rs
make/: README.md  build.mk  common.mk  generators.mk  install.mk  nyra.mk  smoke.mk  test-all.mk  test-macos.mk  test-platform.mk  test-windows.mk  test.mk
pkg/: Cargo.toml
pkg-registry/: Cargo.toml
pkg-registry/src/: main.rs
pkg/src/: lib.rs  lockfile.rs  registry.rs  registry_client.rs  rust_bridge.rs  semver.rs
rt/: Cargo.toml
rt/src/: lib.rs
scripts/: install.ps1  install.sh
skills/: Escape_Analysis.md  PGO.md  guidelines.md  guidlines.md  nyra_mvp_compiler.md  skill.md
stdlib/: README.md  alloc.ny  arc.ny  async.ny  async_v1.ny  box.ny  builtins_array.ny  builtins_json.ny  builtins_math.ny  builtins_string.ny  color.ny  compiler.ny  fs.ny  http.ny  io.ny  json.ny  log.ny  map.ny  math.ny  mem.ny  net.ny  nyra_rt.c  nyra_rt.h  nyra_rt_wasi.c  option.ny  os.ny  path.ny  pkg.ny  process.ny  race.ny  random.ny  result.ny  strings.ny  testing.ny  time.ny  tls.ny  vec.ny  vec_str.ny
(+1644 files in other folders)
