[package]
name = "nyra-bindgen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Rust crate → C-ABI wrapper + Nyra bindings generator (syn-based)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
tempfile = "3"
