[package]
name = "nyra-dap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Debug Adapter Protocol server for Nyra (LLDB/GDB bridge)"

[[bin]]
name = "nyra-dap"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
