[package]
name = "nyra-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fuzz-gen = { path = "../compiler/fuzz-gen" }
lexer = { path = "../compiler/lexer" }
parser = { path = "../compiler/parser" }
compiler = { path = "../compiler/driver" }

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_compile"
path = "fuzz_targets/fuzz_compile.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_gen"
path = "fuzz_targets/fuzz_gen.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_codegen"
path = "fuzz_targets/fuzz_codegen.rs"
test = false
doc = false
bench = false
