[package]
name = "pkg-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local Nyra package registry (HTTP index MVP)"

[[bin]]
name = "pkg-registry"
path = "src/main.rs"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
pkg = { path = "../pkg" }
