[package]
name = "pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Nyra package manager library (v0.4)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dirs = "5"
nyra-bindgen = { path = "../bindgen" }
