[package]
name = "codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Nyra LLVM IR code generation"

[dependencies]
ast = { path = "../ast" }
ownership = { path = "../ownership" }
types = { path = "../types" }

[dev-dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
